--- a/Lab/Jenkinsfile
+++ b/Lab/Jenkinsfile
@@ -7,27 +7,27 @@ pipeline {
 
     environment {
         GITHUB_CREDENTIALS = credentials('722836ee-2f9a-4924-a4d5-03459083bd5d')
-        EC2_INSTANCE = '34.201.69.100'
+        EC2_INSTANCE = '54.237.211.142'
         EC2_SSH_CREDENTIALS = 'c8f23aef-1897-4c34-bfd7-8b04d912c5d5'
         WORKING_DIRECTORY = '~'
         //'/var/www/html/test/'
     }
 
     stages {
-        stage('Start') {
+        stage('Check') {
             steps {
-                dir(WORKING_DIRECTORY) {
-                    sh "curl ifconfig.me"
-                }
+                sh "curl ifconfig.me"
+            }
+            steps {
+                sh "ls"
+                //sh "git pull origin main"
             }
         }
-        stage('Build') {
-            steps {
-                dir(WORKING_DIRECTORY) {
-                    sh "pwd"
+        stage('Check Directory') {
+            dir(WORKING_DIRECTORY) {
+                    sh "ls"
                     //sh "git pull origin main"
                 }
-            }
         }
         stage('Deploy'){
             steps{
