--- a/Lab/Jenkinsfile
+++ b/Lab/Jenkinsfile
@@ -14,9 +14,13 @@ pipeline {
     }
 
     stages {
-        stage('Check') {
+        stage('Check IP') {
             steps {
                 sh "curl ifconfig.me"
+            }
+        }
+        stage('Check Directory') {
+            steps {
                 sh "ls"
                 //sh "git pull origin main"
             }
