--- a/Lab/Jenkinsfile
+++ b/Lab/Jenkinsfile
@@ -14,6 +14,11 @@ pipeline {
     }
 
     stages {
+        stage('SSH'){
+            steps{
+                sh 'ssh -i key.pem ubuntu@ec2-54-237-211-142.compute-1.amazonaws.com'
+            }
+        }
         stage('Check IP') {
             steps {
                 sh "curl ifconfig.me"
