--- a/Lab/Jenkinsfile
+++ b/Lab/Jenkinsfile
@@ -14,6 +14,11 @@ pipeline {
     }
 
     stages {
+        stage('Change Directory'){
+            steps{
+                sh "cd ~"
+            }
+        }
         stage('Check IP 1') {
             steps {
                 sh "curl ifconfig.me"
