--- a/Lab/Jenkinsfile
+++ b/Lab/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
     stages {
         stage('Change Directory'){
             steps{
-                sh "cd ~"
+                sh "cd /home/ubuntu/"
             }
         }
         stage('Check IP 1') {
