--- a/Lab/Jenkinsfile
+++ b/Lab/Jenkinsfile
@@ -9,27 +9,11 @@ pipeline {
         GITHUB_CREDENTIALS = credentials('722836ee-2f9a-4924-a4d5-03459083bd5d')
         EC2_INSTANCE = '54.237.211.142'
         EC2_SSH_CREDENTIALS = 'c8f23aef-1897-4c34-bfd7-8b04d912c5d5'
-        WORKING_DIRECTORY = '~'
-        //'/var/www/html/test/'
+        WORKING_DIRECTORY = '/var/www/html/test/'
     }
 
     stages {
-        stage('Change Directory'){
-            steps{
-                sh "cd /home/ubuntu/"
-            }
-        }
-        stage('Check IP 1') {
-            steps {
-                sh "curl ifconfig.me"
-            }
-        }
-        stage('SSH'){
-            steps{
-                sh 'ssh -i key.pem ubuntu@ec2-54-237-211-142.compute-1.amazonaws.com'
-            }
-        }
-        stage('Check IP 2') {
+        stage('Check IP') {
             steps {
                 sh "curl ifconfig.me"
             }
@@ -40,6 +24,11 @@ pipeline {
                     sh "ls"
                     //sh "git pull origin main"
                 }
+            }
+        }
+        stage('Build'){
+            steps{
+                sh "git"
             }
         }
         stage('Deploy'){
