--- a/Lab/Jenkinsfile
+++ b/Lab/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
 
     environment {
         GITHUB_CREDENTIALS = credentials('722836ee-2f9a-4924-a4d5-03459083bd5d')
-        EC2_INSTANCE = '34.201.69.100'
+        REMOTE_EC2_IP = '34.201.69.100'
         EC2_SSH_CREDENTIALS = 'c8f23aef-1897-4c34-bfd7-8b04d912c5d5'
         WORKING_DIRECTORY = '/var/www/html/'
     }
