--- a/Lab/Jenkinsfile
+++ b/Lab/Jenkinsfile
@@ -1,16 +1,16 @@
 pipeline {
     agent any
-
+    /*
     triggers {
         pollSCM('')
       }
-    /*
+      */
     environment {
-        GITHUB_CREDENTIALS = credentials('722836ee-2f9a-4924-a4d5-03459083bd5d')
+        GITHUB_CREDENTIALS = credentials('4bce3c62-c683-41d9-bc63-d9ffd4385df7')
         REMOTE_EC2_IP = '54.205.183.102'
-        EC2_SSH_CREDENTIALS = 'c8f23aef-1897-4c34-bfd7-8b04d912c5d5'
-        WORKING_DIRECTORY = '/var/www/html/'
-    }*/
+        EC2_SSH_CREDENTIALS = 'd608d6af-e1f6-41ea-9d46-e6502262e197'
+        //WORKING_DIRECTORY = '/var/www/html/'
+    }
 
     stages {
         stage('Check'){
@@ -24,7 +24,23 @@ pipeline {
                     sh "ls"
                 //}
             }
-        }/*
+        }
+        stage('Checkout from GitHub') {
+            steps {
+                script {
+                    // Checkout code from GitHub
+                    git credentialsId: GITHUB_CREDENTIALS, url: 'https://github.com/itxcrusher/Jenkins.git', branch: 'main'
+                }
+            }
+        }
+        stage('Deploy to Managed Instance') {
+            steps {
+                script {
+                    // Copy files to the managed instance
+                    sh 'scp -r Ansible ubuntu@54.205.183.102:/var/www/html/'
+                }
+            }
+        /*
         stage('Build'){
             steps{
                 sh "git pull origin main"
