--- a/Lab/Jenkinsfile
+++ b/Lab/Jenkinsfile
@@ -53,7 +53,8 @@ pipeline {
         stage('Archive Artifacts') {
             steps {
                 sh "echo 'Archiving Artifacts'"
-                archiveArtifacts '/*.jar'
+                archiveArtifacts 'artifact.txt'
+                //archiveArtifacts '/*.jar'
                 /*
                 script {
                     sh "dd if=/dev/urandom of=artifact.txt bs=5MB count=1"
